objects/LiveChatTranscript.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Chat Transcripts</relationshipLabel>
        <relationshipName>Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_utm_term__c</fullName>
        <label>Form utm term</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Code__c</fullName>
        <description>Actual code for the Watermark Community, passed from the chat page</description>
        <label>Community Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Page__c</fullName>
        <description>Page from the Community where the user launched the Virtual Assistant</description>
        <label>Community Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_medium__c</fullName>
        <label>Form utm medium</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_source__c</fullName>
        <label>Form utm source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_content__c</fullName>
        <label>Form utm content</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatRequestSource__c</fullName>
        <description>Optional field to track what web &quot;source&quot; originated a Chat Visitor, like a Google Search, etc.</description>
        <label>ChatRequestSource</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Landing_Page__c</fullName>
        <label>Form Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_utm_campaign__c</fullName>
        <label>Form utm campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Last_Referrer__c</fullName>
        <label>Form Last Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_First_Referrer__c</fullName>
        <label>Form First Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Lead_Source__c</fullName>
        <description>Source URL that the Chat was initiated from</description>
        <label>Internet_Lead_Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>